update fix button into one row

--- a/views/Control/control.hbs
+++ b/views/Control/control.hbs
@@ -84,80 +84,80 @@
           </td>
         </tr>
         <tr>
-      <tbody style="display:none" id="setRange1" class="table-group-divider">
-        <td>
-          <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Nồng độ OXI Max" aria-label="Nồng độ OXI Max"
-              aria-describedby="basic-addon2">
-            <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button">Set</button>
-            </div>
-          </div>
-        </td>
-        <td>
-          <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Nồng độ OXI Min" aria-label="Nồng độ OXI Min"
-              aria-describedby="basic-addon2">
-            <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button">Set</button>
-            </div>
-          </div>
-        </td>
-        <td>
-          <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Độ đục MAX" aria-label="Độ đục MAX"
-              aria-describedby="basic-addon2">
-            <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button">Set</button>
-            </div>
-          </div>
-        </td>
-      </tbody>
-      </tr>
-           <tr>
-        <tbody style="display:none" id="setRange2">
-          <td>
-            <div class="input-group mb-3">
-              <input type="text" class="form-control" placeholder="Độ PH MAX" aria-label="Độ PH MAX"
-                aria-describedby="basic-addon2">
-              <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button">Set</button>
+          <tbody style="display:none" id="setRange1" class="table-group-divider">
+            <td>
+              <div class="input-group mb-3" style="display: table;">
+                <input type="text" class="form-control" placeholder="Nồng độ OXI Max" aria-label="Nồng độ OXI Max"
+                  aria-describedby="basic-addon2" style="top: 12px;">
+                <div class="input-group-append" style="display: table-cell;">
+                  <button class="btn btn-secondary" type="button">Set</button>
+                </div>
               </div>
-            </div>
-          </td>
-          <td>
-            <div class="input-group mb-3">
-              <input type="text" class="form-control" placeholder="Độ PH MIN" aria-label="Độ PH MIN"
-                aria-describedby="basic-addon2">
-              <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button">Set</button>
+            </td>
+            <td>
+              <div class="input-group mb-3" style="display: table;">
+                <input type="text" class="form-control" placeholder="Nồng độ OXI Min" aria-label="Nồng độ OXI Min"
+                  aria-describedby="basic-addon2" style="top: 12px;">
+                <div class="input-group-append" style="display: table-cell;">
+                  <button class="btn btn-outline-secondary" type="button">Set</button>
+                </div>
               </div>
-            </div>
-          </td>
-        </tbody>
-      </tr>
-      <tr>
-        <tbody style="display:none" id="setRange3">
-          <td>
-            <div class="input-group mb-3">
-              <input type="text" class="form-control" placeholder="Độ PH MAX" aria-label="Độ PH MAX"
-                aria-describedby="basic-addon2">
-              <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button">Set</button>
+            </td>
+            <td>
+              <div class="input-group mb-3" style="display: table;">
+                <input type="text" class="form-control" placeholder="Độ đục MAX" aria-label="Độ đục MAX"
+                  aria-describedby="basic-addon2" style="top: 12px;">
+                <div class="input-group-append" style="display: table-cell;">
+                  <button class="btn btn-outline-secondary" type="button">Set</button>
+                </div>
               </div>
-            </div>
-          </td>
-          <td>
-            <div class="input-group mb-3">
-              <input type="text" class="form-control" placeholder="Độ PH MIN" aria-label="Độ PH MIN"
-                aria-describedby="basic-addon2">
-              <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button">Set</button>
+            </td>
+          </tbody>
+        </tr>
+        <tr>
+          <tbody style="display:none" id="setRange2">
+            <td>
+              <div class="input-group mb-3" style="display: table;">
+                <input type="text" class="form-control" placeholder="Độ PH MAX" aria-label="Độ PH MAX"
+                  aria-describedby="basic-addon2" style="top: 12px;">
+                <div class="input-group-append" style="display: table-cell;">
+                  <button class="btn btn-outline-secondary" type="button">Set</button>
+                </div>
               </div>
-            </div>
-          </td>
-        </tbody>
-      </tr>
+            </td>
+            <td>
+              <div class="input-group mb-3" style="display: table;">
+                <input type="text" class="form-control" placeholder="Độ PH MIN" aria-label="Độ PH MIN"
+                  aria-describedby="basic-addon2" style="top: 12px;">
+                <div class="input-group-append" style="display: table-cell;">
+                  <button class="btn btn-outline-secondary" type="button">Set</button>
+                </div>
+              </div>
+            </td>
+          </tbody>
+        </tr>
+        <tr>
+          <tbody style="display:none" id="setRange3">
+            <td>
+              <div class="input-group mb-3" style="display: table;">
+                <input type="text" class="form-control" placeholder="Độ PH MAX" aria-label="Độ PH MAX"
+                  aria-describedby="basic-addon2" style="top: 12px;">
+                <div class="input-group-append" style="display: table-cell;">
+                  <button class="btn btn-outline-secondary" type="button">Set</button>
+                </div>
+              </div>
+            </td>
+            <td>
+              <div class="input-group mb-3" style="display: table;">
+                <input type="text" class="form-control" placeholder="Độ PH MIN" aria-label="Độ PH MIN"
+                  aria-describedby="basic-addon2" style="top: 12px;">
+                <div class="input-group-append" style="display: table-cell;">
+                  <button class="btn btn-outline-secondary" type="button">Set</button>
+                </div>
+              </div>
+            </td>
+          </tbody>
+        </tr>
       </tbody>
     </table>
   </div>
