--- a/views/Control/control.hbs
+++ b/views/Control/control.hbs
@@ -90,7 +90,7 @@
                 <input type="text" class="form-control" placeholder="Nồng độ OXI Max" aria-label="Nồng độ OXI Max"
                   aria-describedby="basic-addon2" style="top: 12px;">
                 <div class="input-group-append" style="display: table-cell;">
-                  <button class="btn btn-secondary" type="button">Set</button>
+                  <button class="btn btn-outline-secondary" type="button" style="margin: 10px;">Set</button>
                 </div>
               </div>
             </td>
@@ -99,7 +99,7 @@
                 <input type="text" class="form-control" placeholder="Nồng độ OXI Min" aria-label="Nồng độ OXI Min"
                   aria-describedby="basic-addon2" style="top: 12px;">
                 <div class="input-group-append" style="display: table-cell;">
-                  <button class="btn btn-outline-secondary" type="button">Set</button>
+                  <button class="btn btn-outline-secondary" type="button" style="margin: 10px;">Set</button>
                 </div>
               </div>
             </td>
@@ -108,7 +108,7 @@
                 <input type="text" class="form-control" placeholder="Độ đục MAX" aria-label="Độ đục MAX"
                   aria-describedby="basic-addon2" style="top: 12px;">
                 <div class="input-group-append" style="display: table-cell;">
-                  <button class="btn btn-outline-secondary" type="button">Set</button>
+                  <button class="btn btn-outline-secondary" type="button" style="margin: 10px;">Set</button>
                 </div>
               </div>
             </td>
@@ -121,7 +121,7 @@
                 <input type="text" class="form-control" placeholder="Độ PH MAX" aria-label="Độ PH MAX"
                   aria-describedby="basic-addon2" style="top: 12px;">
                 <div class="input-group-append" style="display: table-cell;">
-                  <button class="btn btn-outline-secondary" type="button">Set</button>
+                  <button class="btn btn-outline-secondary" type="button" style="margin: 10px;">Set</button>
                 </div>
               </div>
             </td>
@@ -130,7 +130,7 @@
                 <input type="text" class="form-control" placeholder="Độ PH MIN" aria-label="Độ PH MIN"
                   aria-describedby="basic-addon2" style="top: 12px;">
                 <div class="input-group-append" style="display: table-cell;">
-                  <button class="btn btn-outline-secondary" type="button">Set</button>
+                  <button class="btn btn-outline-secondary" type="button" style="margin: 10px;">Set</button>
                 </div>
               </div>
             </td>
@@ -142,8 +142,8 @@
               <div class="input-group mb-3" style="display: table;">
                 <input type="text" class="form-control" placeholder="Độ PH MAX" aria-label="Độ PH MAX"
                   aria-describedby="basic-addon2" style="top: 12px;">
-                <div class="input-group-append" style="display: table-cell;">
-                  <button class="btn btn-outline-secondary" type="button">Set</button>
+                <div class="input-group-append" style="display: table-cell">
+                  <button class="btn btn-outline-secondary" type="button" style="margin: 10px;" style="margin: 10px;">Set</button>
                 </div>
               </div>
             </td>
@@ -152,7 +152,7 @@
                 <input type="text" class="form-control" placeholder="Độ PH MIN" aria-label="Độ PH MIN"
                   aria-describedby="basic-addon2" style="top: 12px;">
                 <div class="input-group-append" style="display: table-cell;">
-                  <button class="btn btn-outline-secondary" type="button">Set</button>
+                  <button class="btn btn-outline-secondary" type="button" style="margin: 10px;">Set</button>
                 </div>
               </div>
             </td>
