--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -13,7 +13,10 @@
     <ul class="nav navbar-nav navbar-right ml-auto">
       <li class="nav-item"></li>
       {{#if isLogin}}
-        <img class="img-fluid" src="/icon/user.png" alt="Image" />
+      {{!-- <a href="/users/logout">
+          <img class="img-fluid" src="/icon/user.png" alt="Image" />
+      </a> --}}
+        <a class="btn btn-primary dropdown-toggle get-started-btn mt-1 mb-1" href="/users/logout">Đăng Xuất</a>
       {{else}}
         <a class="btn btn-primary dropdown-toggle get-started-btn mt-1 mb-1" href="/users/login">Đăng Nhập</a>
       {{/if}}
