--- a/views/Control/control.hbs
+++ b/views/Control/control.hbs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <title>Control Device</title>
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
