--- a/views/Users/login.hbs
+++ b/views/Users/login.hbs
@@ -160,7 +160,7 @@
           </div>
           <div class="form-group">
             <div class="input-group"><span class="input-group-addon"><i class="fa fa-lock"></i></span>
-              <input class="form-control" type="text" name="password" placeholder="Password" required="required">
+              <input class="form-control" type="password" name="password" placeholder="Password" required="required">
             </div>
           </div>
           <div class="form-group">
