Update calculator weekly data

--- a/views/Chart/chart.hbs
+++ b/views/Chart/chart.hbs
@@ -23,13 +23,16 @@
         </div>
         <br>
         <div id="btnDate">
-            <button id="btn_test1" onclick="addButton()" type="button" class="btn btn-primary">Choose Date</button>
+            <button id="btn_chooseDate" onclick="addButton(1)" type="button" class="btn btn-primary">Choose Date</button>
         </div>
         <br>
         <div style="width:1000px;height:500px">
             <canvas id="firstChart"></canvas>
         </div>
         <br>
+        <div id="btnWeek">
+            <button id="btn_chooseWeek" onclick="getWeekData()" type="button" class="btn btn-primary">Get WeeK</button>
+        </div>
         <br>
         <script src="/js/chart.js"></script>
     </div>
