--- a/views/Setting/settingTime.hbs
+++ b/views/Setting/settingTime.hbs
@@ -224,7 +224,7 @@
           </td>
           <td>
             <br>
-            <button type="button" class="btn btn-primary" onclick="settingTime(6)">Set</button>d
+            <button type="button" class="btn btn-primary" onclick="settingTime(6)">Set</button>
           </td>
         </tr>
       </tbody>
