--- a/views/Control/control.hbs
+++ b/views/Control/control.hbs
@@ -128,10 +128,10 @@
             </td>
             <td>
               <div class="input-group mb-3" style="display: table;">
-                <input id="phRangeMin" type="text" class="form-control" placeholder="Độ PH MIN" aria-label="Độ PH MIN"
+                <input id="pHRangeMin" type="text" class="form-control" placeholder="Độ PH MIN" aria-label="Độ PH MIN"
                   aria-describedby="basic-addon2" style="top: 12px;">
                 <div class="input-group-append" style="display: table-cell;">
-                  <button class="btn btn-outline-secondary" type="button" style="margin: 10px;" onclick="settingRange('phRangeMin')">Set</button>
+                  <button class="btn btn-outline-secondary" type="button" style="margin: 10px;" onclick="settingRange('pHRangeMin')">Set</button>
                 </div>
               </div>
             </td>
@@ -141,7 +141,7 @@
           <tbody style="display:none" id="setRange3">
             <td>
               <div class="input-group mb-3" style="display: table;">
-                <input id="tempRangeMin" type="text" class="form-control" placeholder="Nhiệt Độ MAX" aria-label="Độ PH MAX"
+                <input id="tempRangeMin" type="text" class="form-control" placeholder="Nhiệt Độ MIN" aria-label="Nhiệt Độ MIN"
                   aria-describedby="basic-addon2" style="top: 12px;">
                 <div class="input-group-append" style="display: table-cell">
                   <button class="btn btn-outline-secondary" type="button" style="margin: 10px;" style="margin: 10px;" onclick="settingRange('tempRangeMin')">Set</button>
@@ -150,7 +150,7 @@
             </td>
             <td>
               <div class="input-group mb-3" style="display: table;">
-                <input id="tempRangeMax" type="text" class="form-control" placeholder="Nhiệt Độ MIN" aria-label="Độ PH MIN"
+                <input id="tempRangeMax" type="text" class="form-control" placeholder="Nhiệt Độ MAX" aria-label="Nhiệt Độ MAX"
                   aria-describedby="basic-addon2" style="top: 12px;">
                 <div class="input-group-append" style="display: table-cell;">
                   <button class="btn btn-outline-secondary" type="button" style="margin: 10px;" onclick="settingRange('tempRangeMax')">Set</button>
