--- a/views/Control/control.hbs
+++ b/views/Control/control.hbs
@@ -162,6 +162,7 @@
       </tbody>
     </table>
   </div>
+  <script src="/socket.io/socket.io.js"></script>
   <script src="/js/control_view.js"></script>
 </body>
 
