--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -5,23 +5,47 @@
   <!-- Collection of nav links, forms, and other content for toggling-->
   <div class="collapse navbar-collapse justify-content-start" id="navbarCollapse">
     <ul class="nav navbar-nav">
-      <li class="nav-item"><a class="nav-link" href="/display">Viewer</a></li>
-      <li class="nav-item"><a class="nav-link" href="/control">Control Device</a></li>
-      <li class="nav-item active"><a class="nav-link" href="/chart">Chart</a></li>
-      <li class="nav-item active"><a class="nav-link" href="/setting">Setting Time</a></li>
+      <li class="nav-item"><a class="nav-link" href="javascript:checkLogin(1);">Viewer</a></li>
+      <li class="nav-item"><a class="nav-link" href="javascript:checkLogin(2)">Control Device</a></li>
+      <li class="nav-item active"><a class="nav-link" href="javascript:checkLogin(3)">Chart</a></li>
+      <li class="nav-item active"><a class="nav-link" href="javascript:checkLogin(4)">Setting Time</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right ml-auto">
       <li class="nav-item"></li>
       {{#if isLogin}}
-      {{!-- <a href="/users/logout">
+      <a href="javascript:AlertIt();">
           <img class="img-fluid" src="/icon/user.png" alt="Image" />
-      </a> --}}
-        <a class="btn btn-primary dropdown-toggle get-started-btn mt-1 mb-1" href="/users/logout">Đăng Xuất</a>
+      </a>
+        {{!-- <a class="btn btn-primary dropdown-toggle get-started-btn mt-1 mb-1" href="/users/logout">Đăng Xuất</a> --}}
       {{else}}
-        <a class="btn btn-primary dropdown-toggle get-started-btn mt-1 mb-1" href="/users/login">Đăng Nhập</a>
+        <a class="btn btn-primary dropdown-toggle get-started-btn mt-1 mb-1" href="/users/login">Login</a>
+        <a class="btn btn-primary dropdown-toggle get-started-btn mt-1 mb-1" href="/users/register">Register</a>
       {{/if}}
       <!--li.nav-item-->
       <!--a.btn.btn-primary.dropdown-toggle.get-started-btn.mt-1.mb-1(href='/users/register') Đăng Kí-->
     </ul>
   </div>
 </nav>
+<script>
+  function AlertIt() {
+    var answer = confirm ("Do you want to sign out? Please click on OK to continue.")
+    if (answer)
+    window.location="http://localhost:3000/users/logout";
+  };
+  function checkLogin(id){
+    console.log("Check login");
+    if(isLogin){
+      if(id == 1){
+        window.location="http://localhost:3000/display";
+      } else if(id == 2){
+        window.location="http://localhost:3000/control";
+      } else if(id == 3 ){
+        window.location="http://localhost:3000/chart";
+      } else {
+        window.location="http://localhost:3000/setting";
+      }
+    } else {
+      confirm ("Please login.")
+    }
+  }
+</script>
